# WarpDeck

./: .gitignore  BUILD_TRIGGER.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.receiver  Dockerfile.sender  GITHUB_FEATURES.md  README.md  docker-compose.yml  setup-dev.sh  test_receiver.cpp  test_sender.cpp  test_simple.txt  test_warpdeck.cpp  test_warpdeck_binary
.claude/: settings.local.json
.github/: dependabot.yml
.github/actions/setup-build-env/: action.yml
.github/workflows/: advanced-ci.yml  build.yml  environments-demo.yml  release.yml
libwarpdeck/: CMakeLists.txt
libwarpdeck/include/: warpdeck.h
libwarpdeck/src/: api_client.cpp  api_client.h  api_server.cpp  api_server.h  discovery_manager.cpp  discovery_manager.h  discovery_manager_linux.cpp  discovery_manager_macos.cpp  logger.cpp  logger.h  security_manager.cpp  security_manager.h  transfer_manager.cpp  transfer_manager.h  utils.cpp  utils.h  warpdeck.cpp
sender_files/: image_simulation.txt  test_document.txt
warpdeck-cli/: CMakeLists.txt  README.md
warpdeck-cli/src/: cli_application.cpp  cli_application.h  command_parser.cpp  command_parser.h  interactive_ui.cpp  interactive_ui.h  main.cpp
warpdeck-flutter/warpdeck_gui/: DEPLOYMENT.md  README.md  ffigen.yaml  fix_macos_dependencies.sh  flutter_build.yaml  pubspec.yaml  test_dylib.dart
warpdeck-flutter/warpdeck_gui/.github/workflows/: build.yml
warpdeck-flutter/warpdeck_gui/build_scripts/: build_linux.sh  build_macos.sh  build_windows.bat  build_windows.ps1
warpdeck-flutter/warpdeck_gui/desktop/: warpdeck.desktop
warpdeck-flutter/warpdeck_gui/docs/: DISTRIBUTION.md
warpdeck-flutter/warpdeck_gui/lib/: main.dart
warpdeck-flutter/warpdeck_gui/lib/models/: peer.dart  peer.g.dart  transfer.dart  transfer.g.dart
warpdeck-flutter/warpdeck_gui/lib/screens/: dashboard_screen.dart  debug_screen.dart  settings_screen.dart
warpdeck-flutter/warpdeck_gui/lib/services/: debug_service.dart  libwarpdeck_ffi.dart  network_diagnostic_service.dart  platform_service.dart  update_service.dart  warpdeck_service.dart
warpdeck-flutter/warpdeck_gui/lib/utils/: app_theme.dart
warpdeck-flutter/warpdeck_gui/lib/widgets/: peer_list_widget.dart  send_files_button.dart  status_indicator.dart  transfer_list_widget.dart  update_dialog.dart
warpdeck-flutter/warpdeck_gui/linux/: CMakeLists.txt  my_application.cc
warpdeck-flutter/warpdeck_gui/macos/Flutter/: GeneratedPluginRegistrant.swift
warpdeck-flutter/warpdeck_gui/macos/Runner/: Info.plist
warpdeck-flutter/warpdeck_gui/macos/Runner.xcodeproj/: project.pbxproj
warpdeck-flutter/warpdeck_gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
warpdeck-flutter/warpdeck_gui/macos/Runner/Configs/: AppInfo.xcconfig
warpdeck-flutter/warpdeck_gui/scripts/: performance_test.dart
warpdeck-flutter/warpdeck_gui/steam/: warpdeck.desktop
warpdeck-flutter/warpdeck_gui/test/: widget_test.dart
warpdeck-flutter/warpdeck_gui/windows/: CMakeLists.txt
warpdeck-flutter/warpdeck_gui/windows/flutter/: generated_plugin_registrant.cc
warpdeck-flutter/warpdeck_gui/windows/runner/: Runner.rc  main.cpp
website/: index.html  script.js  styles.css
